#	Automake script for libParEstLib/src
#
# This file is part of libParEstLib.
# Copyright 2011-2017 Gabriele Lillacci.
#
# libParEstLib is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libParEstLib is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with libParEstLib.  If not, see <http://www.gnu.org/licenses/>.


lib_LTLIBRARIES = libparestlib.la
libparestlib_la_SOURCES = dcms.c deriv.c ecdf.c kalmanfilter.c kdmo.c measurement.c minim.c stochsim.c utility.c variance.c fcs.c
